--- a/src/components/chord-position/chord-position.scss
+++ b/src/components/chord-position/chord-position.scss
@@ -8,7 +8,7 @@ chord-position {
 		text {
     		font-size: 20px;
 		}
-		
+
 		g.frets {
 			rect {
 				fill: #000000;
@@ -17,6 +17,7 @@ chord-position {
 
 		g.string {
 			fill: #000000;
+            transform: translateY(19px);
 
 			&.muted {
 				fill: #cccccc;
@@ -32,34 +33,40 @@ chord-position {
 				fill: #ffffff;
 			}
 
-			&.fret-G1 { transform: translate(3px, 0); }
-			&.fret-C1 { transform: translate(55px, 0); }
-			&.fret-E1 { transform: translate(110px, 0); }
-			&.fret-A1 { transform: translate(165px, 0); }
+			&.fret-G1 { transform: translate(3px, -18px); }
+			&.fret-C1 { transform: translate(55px, -18px); }
+			&.fret-E1 { transform: translate(110px, -18px); }
+			&.fret-A1 { transform: translate(165px, -18px); }
 
-			&.fret-G2 { transform: translate(3px, 54px); }
-			&.fret-C2 { transform: translate(55px, 54px); }
-			&.fret-E2 { transform: translate(110px, 54px); }
-			&.fret-A2 { transform: translate(165px, 54px); }
+			&.fret-G2 { transform: translate(3px, 36px); }
+			&.fret-C2 { transform: translate(55px, 36px); }
+			&.fret-E2 { transform: translate(110px, 36px); }
+			&.fret-A2 { transform: translate(165px, 36px); }
 
-			&.fret-G3 { transform: translate(3px, 109px); }
-			&.fret-C3 { transform: translate(55px, 109px); }
-			&.fret-E3 { transform: translate(110px, 109px); }
-			&.fret-A3 { transform: translate(165px, 109px); }
+			&.fret-G3 { transform: translate(3px, 92px); }
+			&.fret-C3 { transform: translate(55px, 92px); }
+			&.fret-E3 { transform: translate(110px, 92px); }
+			&.fret-A3 { transform: translate(165px, 92px); }
 
-			&.fret-G4 { transform: translate(3px, 164px); }
-			&.fret-C4 { transform: translate(55px, 164px); }
-			&.fret-E4 { transform: translate(110px, 164px); }
-			&.fret-A4 { transform: translate(165px, 164px); }
+			&.fret-G4 { transform: translate(3px, 146px); }
+			&.fret-C4 { transform: translate(55px, 146px); }
+			&.fret-E4 { transform: translate(110px, 146px); }
+			&.fret-A4 { transform: translate(165px, 146px); }
+
+            &.fret-G5 { transform: translate(3px, 200px); }
+			&.fret-C5 { transform: translate(55px, 200px); }
+			&.fret-E5 { transform: translate(110px, 200px); }
+			&.fret-A5 { transform: translate(165px, 200px); }
 		}
 
 		text.fret-label {
 			fill: #000000;
 
-			&.fret-label-1 { transform: translate(-5px, 73px); }
-			&.fret-label-2 { transform: translate(-5px, 128px); }
-			&.fret-label-3 { transform: translate(-5px, 185px); }
-			&.fret-label-4 { transform: translate(-5px, 238px); }
+			&.fret-label-1 { transform: translate(-5px, 53px); }
+			&.fret-label-2 { transform: translate(-5px, 108px); }
+			&.fret-label-3 { transform: translate(-5px, 165px); }
+			&.fret-label-4 { transform: translate(-5px, 218px); }
+            &.fret-label-5 { transform: translate(-5px, 270px); }
 		}
 	}
 }
